--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -7,3 +7,32 @@
     left: 0
     top: 0
     background: #003049
+    transition: .35s
+
+@media screen and ( max-width: 1900px )
+    .aside
+        position: fixed
+        &.open
+            width: 70px
+
+@media screen and ( max-width: 992px )
+    .aside
+        width: 200px
+
+@media screen and ( max-width: 768px )
+    .aside
+        width: 70px
+        &.open
+            width: 200px
+
+@media screen and ( max-width: 480px )
+    .aside
+        width: 250px
+        transform: translateX(-250px)
+        &.open
+            width: 250px
+            transform: translateX(0)
+        .burger
+            position: fixed
+            top: 0
+            left: 100%
