--- a/components/header/header.module.sass
+++ b/components/header/header.module.sass
@@ -109,3 +109,17 @@ header.dashboard__header
         &.full__width
             width: 100%
             margin-left: 0
+        .container
+            .notify
+                margin-right: 2rem
+            .profile
+                display: flex
+                align-items: center
+                cursor: pointer
+                .dp__container
+                    margin-right: .8rem
+                .name
+                    span
+                        display: none
+                    .icon
+                        margin-left: 0rem
