--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -15,6 +15,7 @@
     .burger
         display: none
         z-index: 10
+        box-shadow: 3px 4px 15px 3px rgba(0, 0, 0, 0.15)
     .logo__container
         height: 60px
         width: 130px
@@ -27,6 +28,50 @@
             height: 30px
             width: 130px
             position: relative
+    nav
+        ul
+            padding: 20px 0
+            li
+                height: 50px
+                margin: 15px 0
+                a
+                    display: flex
+                    justify-content: flex-start
+                    align-items: center
+                    padding: 0 20px
+                    width: 100%
+                    height: 100%
+                    line-height: 50px
+                    transition: .35s
+                    overflow: hidden
+                    font-size: 1rem
+                    color: #E2E8EC
+                    position: relative
+                    &:hover, &.active
+                        background: rgba(226, 232, 236, 0.1)
+                        text-decoration: none
+                    &.active
+                        &::before, &::after
+                            content: ""
+                            position: absolute
+                            top: 0
+                            height: 100%
+                        &::before
+                            left: 0
+                            width: 3px
+                            background: $secondary
+                        &::after
+                            right: 0
+                            width: 0
+                            height: 0
+                            border-style: solid
+                            border-width: 25px 15px 25px 0
+                            border-color: transparent #E2E8EC transparent transparent
+                    .icon
+                        margin-right: 15px
+                        font-size: 24px
+                    span
+                        transition: .2s
 
 @media screen and ( max-width: 1900px )
     .aside
@@ -37,6 +82,17 @@
                 transform: rotateZ(180deg)
             .logo__container
                 transform: translateX(calc( 70px + 2rem - 20px ))
+            nav
+                ul
+                    li
+                        a
+                            justify-content: center
+                            padding: 0
+                            .icon
+                                margin-right: 0
+                                font-size: 1.5rem
+                            span
+                                display: none
         .burger
             background: $secondary
             position: absolute
@@ -61,30 +117,72 @@
     .aside
         width: 70px
         .burger
-            top: 70px
-        .wrapper
-            z-index: initial
+            top: 60px
         .logo__container
-            transform: translateX(calc( 70px - 20px + 1rem))
-            z-index: -1
+            opacity: 0
+        nav
+            ul
+                li
+                    a
+                        justify-content: center
+                        padding: 0
+                        .icon
+                            margin-right: 0
+                            font-size: 1.5rem
+                        span
+                            display: none
         &.open
             width: 200px
             .logo__container
-                transform: translateX(calc( 70px - 20px + 1rem))
+                opacity: 1
+                transform: translateX(0)
+            nav
+                ul
+                    padding: 20px 0
+                    li
+                        height: 50px
+                        margin: 15px 0
+                        a
+                            display: flex
+                            justify-content: flex-start
+                            align-items: center
+                            padding: 0 20px
+                            width: 100%
+                            height: 100%
+                            line-height: 50px
+                            transition: .35s
+                            overflow: hidden
+                            font-size: 1rem
+                            color: #E2E8EC
+                            position: relative
+                            &:hover, &.active
+                                background: rgba(226, 232, 236, 0.1)
+                                text-decoration: none
+                            &.active
+                                &::before, &::after
+                                    content: ""
+                                    position: absolute
+                                    top: 0
+                                    height: 100%
+                                &::before
+                                    left: 0
+                                    width: 3px
+                                    background: $secondary
+                                &::after
+                                    display: none
+                            .icon
+                                margin-right: 15px
+                                font-size: 24px
+                            span
+                                transition: .2s
+                                display: inline-block
 
 @media screen and ( max-width: 480px )
     .aside
         width: 250px
         transform: translateX(-250px)
-        .logo__container
-            transform: translateX(calc(250px - 20px + 1rem))
-            z-index: -1
         &.open
             width: 250px
             transform: translateX(0)
-            .logo__container
-                transform: translateX(calc( 1rem - 20px ))
-                z-index: -1
         .burger
-            // top: 70px
             left: calc( 100% + .5rem )
