made the main content layout responsive

--- a/components/layout/layout.module.sass
+++ b/components/layout/layout.module.sass
@@ -38,6 +38,7 @@
         main.main
             width: calc( 100% - 70px )
             margin-left: 70px
+            overflow-y: visible
 
 @media screen and ( max-width: 480px )
     .layout
