--- a/components/templates/template.module.sass
+++ b/components/templates/template.module.sass
@@ -1,5 +1,5 @@
 .main__content
-    width: calc( 100% - 280px - 2rem )
+    width: calc( 100% - 280px )
     background: white
     height: 100vh
 .sub__content
@@ -7,6 +7,20 @@
     height: 100vh
     width: 280px
     position: fixed
-    right: 2rem
-    top: calc( 60px + 2rem )
-    grid-column: span 1
+    right: 0
+    top: 60px
+
+@media screen and ( max-width: 992px )
+    .main__content
+        width: calc( 100% - 230px )
+    .sub__content
+        width: 230px
+
+@media screen and ( max-width: 768px )
+    .main__content
+        width: 100%
+    .sub__content
+        width: 100%
+        position: relative
+        top: 0
+        margin-top: 2rem
