--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -34,6 +34,13 @@ ul
     background-color: gray
     border-radius: .4rem
 
+.metrics__showcase
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+    justify-content: space-between
+    gap: 15px
+
 .content
     margin: 2rem 0
     padding: 0 1.5rem
