--- a/components/metricsCard/metricsCard.module.sass
+++ b/components/metricsCard/metricsCard.module.sass
@@ -2,7 +2,8 @@
     background: radial-gradient(51.39% 51.39% at 28.61% 25.28%, #53ABDB 0%, #0049A9 100%)
     box-shadow: 0px 4px 30px 7px rgba(0, 0, 0, 0.15)
     border-radius: 10px
-    width: 180px
+    width: auto
+    min-width: 150px
     height: 180px
     margin: 10px 0
     display: flex
@@ -10,20 +11,22 @@
     align-items: center
     flex-direction: column
     color: white
-    padding: 10px
+    padding: 2rem 1rem
     transition: .25s
+    flex-grow: 1
+    flex-basis: 0
     h3
         text-align: center
-        margin-bottom: 20px
-        height: 50px
+        margin-bottom: 2rem
+        // height: 50px
         font-size: 16px
         font-weight: normal
+    span
+        font-size: 36px
+        font-weight: bold
+        display: block
+        transition: .2s
+    &:hover
+        transform: translateY(-10px)
         span
-            font-size: 36px
-            font-weight: bold
-            display: block
-            transition: .2s
-        &:hover
-            transform: translateY(-10px)
-            span
-                transform: scale(1.6)
+            transform: scale(1.2)
