added card UI for displaying different data

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -40,6 +40,12 @@ ul
     align-items: center
     justify-content: space-between
     gap: 15px
+    margin-bottom: 3rem
+
+.bread__crumb
+    margin-bottom: 1.5rem
+    span
+        margin-right: .4rem
 
 .content
     margin: 2rem 0
