fixed chard responsiveness

--- a/components/chart/chart.module.sass
+++ b/components/chart/chart.module.sass
@@ -1,4 +1,13 @@
 .chart
+    .chart__display
+        overflow-x: auto 
+        &::-webkit-scrollbar
+            width: .4rem
+            padding: .9rem
+            background-color: #E2E8EC
+        &::-webkit-scrollbar-thumb
+            background-color: lightgray
+            border-radius: .2rem
     svg
         text
             margin-top: 2rem
