--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -55,6 +55,12 @@ ul
 @media screen and ( max-width:768px)
     body
         background: $bg
+        width: 100vw
+        overflow-x: hidden
     .content
         margin: 2rem 0
         padding: 2rem 1rem
+
+@media screen and ( max-width:480px)
+    .content
+        padding-top: 3.5rem
