added aside components to display related details

--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -38,7 +38,7 @@
             padding: 20px 0
             li
                 height: 50px
-                margin: 15px 0
+                margin: 5px 0
                 a
                     display: flex
                     justify-content: flex-start
@@ -145,8 +145,6 @@
                 ul
                     padding: 20px 0
                     li
-                        height: 50px
-                        margin: 15px 0
                         a
                             display: flex
                             justify-content: flex-start
@@ -196,5 +194,5 @@
                 li
                     a
                         &.active
-                            &::before, &::after
+                            &::after
                                 display: none
