--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -155,7 +155,6 @@ ul
 .content
     margin: 2rem 0
     padding: 0 1.5rem
-    // position: relative
     min-height: calc( 100vh - 150px )
 
 @media screen and ( max-width:768px)
@@ -166,6 +165,9 @@ ul
     .content
         margin: 2rem 0
         padding: 2rem 1rem
+        .sub__content
+            .btn
+                display: none
 
 @media screen and ( max-width:480px)
     .content
