--- a/components/templates/template.module.sass
+++ b/components/templates/template.module.sass
@@ -1,16 +1,14 @@
 .main__content
     width: calc( 100% - 280px )
     float: left
+    position: relative
     padding-right: 2rem
 .sub__content
     width: 280px
-    // height: calc( 100px - 60px )
     float: right
     position: sticky
     right: 0
     top: 60px
-    // padding: 2rem 0 0
-    // padding-right: 1rem
 
 @media screen and ( max-width: 992px )
     .main__content
@@ -26,5 +24,5 @@
         width: 100%
         position: relative
         top: 0
-        margin-top: 2rem
+        margin-top: 1rem
         padding: 0
