added upload jib details component

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -15,6 +15,9 @@ a
         color: #E2E8EC
     &:hover
         text-decoration: underline
+button
+    background: none
+    border: none
 
 ul
     list-style: none
