added parent category dropdown UI in upload job page

--- a/components/templates/template.module.sass
+++ b/components/templates/template.module.sass
@@ -8,7 +8,7 @@
     float: right
     position: sticky
     right: 0
-    top: 60px
+    // top: 60px
 
 @media screen and ( max-width: 992px )
     .main__content
