--- a/components/categories/category.module.sass
+++ b/components/categories/category.module.sass
@@ -1,5 +1,22 @@
 @import "../../styles/_colors"
 
+form.form
+    display: flex
+    align-items: center
+    justify-content: center
+    border: 1px solid $primary
+    height: 37px
+    margin: 2rem 0 1rem
+    .btn__primary
+        width: 50px
+        min-width: 50px
+        height: 35px
+        padding: 0
+        font-weight: 400
+        font-size: .9rem
+        &:focus
+            box-shadow: none
+
 .category
     height: 40px
     min-width: 200px
@@ -8,22 +25,6 @@
     margin: 1rem 0
     position: relative
     color: $primary
-    form
-        display: flex
-        align-items: center
-        justify-content: center
-        border: 1px solid $primary
-        height: 37px
-        margin: 2rem 0 1rem
-        .btn__primary
-            width: 50px
-            min-width: 50px
-            height: 35px
-            padding: 0
-            &:focus
-                box-shadow: none
-        input
-            // width: calc( 100% - 50px )
     button
         padding: 0 1rem
         background: #E2E8EC
@@ -59,54 +60,9 @@
             padding: .7rem 0
             border-bottom: 1px solid #BBBBBB
             cursor: pointer
-            .label
-                color: $primary
-                line-height: 1.5rem
-                cursor: pointer
-                position: relative
-                display: flex
-                align-items: center
-                position: relative
-                &::before
-                    display: none
-                    content: ""
-                    position: absolute
-                    height: 16px
-                    width: 16px
-                    margin-right: 1rem
-                    float: left
-                    border: 2px solid $primary
-                    border-radius: 3px
-                    transition: 0.15s all ease-out
-                    border-radius: 3px
-                span
-                    margin-left: 0
-                svg
-                    stroke: white
-                    stroke-width: 3px
-                    height: 0 //Firefox fix
-                    width: 20px
-                    position: absolute
-                    left: 0
-                    top: 0
-                    stroke-dasharray: 108 //Firefox fix
-            &.checked
-                .label
-                    &::before
-                        background: $primary
-                    svg
-                        height: 20px
-                        animation: draw-checkbox ease-in-out 0.2s forwards
-                        path
-                            height: 100%
-                            width: 100%
 
-@keyframes draw-checkbox
-    0%
-        stroke-dashoffset: 14
-
-    100%
-        stroke-dashoffset: 0
+.card
+    padding: .5rem
 
 @media screen and ( max-width: 767px )
     .category
