fixed button issue for mobile

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -186,7 +186,7 @@ ul
             justify-content: flex-end
             margin-bottom: 1rem
         .sub__content
-            .btn
+            .sub_btn
                 display: none
 
 @media screen and ( max-width:480px)
