fixed dashboard UI

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -181,10 +181,12 @@ ul
     .content
         margin: 2rem 0
         padding: 2rem 1rem
+        .metrics__showcase
+            margin-top: 2rem
         .mobile__link
             display: flex
             justify-content: flex-end
-            margin-bottom: 1rem
+            margin-top: -2.8rem
         .sub__content
             .sub_btn
                 display: none
