--- a/components/filter/filter.module.sass
+++ b/components/filter/filter.module.sass
@@ -6,3 +6,7 @@
     box-shadow: 5px 4px 30px 5px rgba(0, 0, 0, 0.15)
     h2
         font-size: clamp(1.1rem, 2vw, 1.3rem)
+
+@media screen and ( max-width: 820px )
+    .card
+        box-shadow: none
