--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -35,6 +35,8 @@ ul
     display: flex
     justify-content: center
     align-items: center
+    position: relative
+    overflow: hidden
     &.span__full
         width: 100%
     &.btn-primary
@@ -54,6 +56,17 @@ ul
     &:hover
         box-shadow: 4px 4px 25px 5px rgba(0, 0, 0, 0.15)
         border-color: white
+span.ripple
+    position: absolute
+    border-radius: 50%
+    transform: scale(0)
+    animation: ripple 800ms linear
+    background-color: rgba(255, 255, 255, 0.5)
+
+@keyframes ripple
+    to
+        transform: scale(4)
+        opacity: 0
 
 .badge
     padding: .3rem .7rem
