finished select identity page UI

--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -25,6 +25,10 @@
             font-size: clamp(1.1rem, 2vw, 1.2rem)
             color: $primary
             font-weight: 550
+        h2
+            padding: 1rem 0
+            font-size: clamp(1rem, 2vw, 1rem)
+
         .dp
             height: 70px
             border-radius: 50%
@@ -41,5 +45,13 @@
             margin-bottom: .7rem
             padding: .5rem
             cursor: pointer
+            font-size: .9rem
             .logo
                 width: 40px
+                margin-right: 1rem
+            .name
+                margin-right: 1rem
+                flex-grow: 5
+            .details
+                justify-self: flex-end
+                flex-grow: 1
