--- a/components/profile_template/profile/profile.module.sass
+++ b/components/profile_template/profile/profile.module.sass
@@ -1,11 +1,14 @@
 @import "../../../styles/_colors.sass"
 
 .profile
+    background: white
+    padding: 1rem
+    margin-bottom: 1.5rem
     .display__profile
         .card
             padding: 0.5rem 0
             margin: 1rem 0
-            border-bottom: 1px solid $secondary
+            border-bottom: 1px solid #bbbbbb
 
             h3
                 font-weight: 500
