--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -194,8 +194,10 @@ span.ripple
     .content
         margin: 2rem 0
         padding: 2rem 1rem
-        .metrics__showcase
+        .mt-1
             margin-top: 2rem
+        // .metrics__showcase
+
         .mobile__link
             display: flex
             justify-content: flex-end
