add customized error page

--- a/components/error/error.module.sass
+++ b/components/error/error.module.sass
@@ -9,7 +9,7 @@
     flex-direction: column
     margin: auto
     max-width: 90%
-    padding: 3rem 0 8rem
+    // padding: 3rem 0 8rem
     h1
         font-size: clamp(9rem, 3vw, 6rem)
         color: white
