--- a/components/profile_template/profile/profile.module.sass
+++ b/components/profile_template/profile/profile.module.sass
@@ -1,11 +1,12 @@
 @import "../../../styles/_colors.sass"
 
 .profile
+    article
+        padding: 1rem 2rem
     .card
         padding: 0.5rem 0
         margin: 1rem 0
         border-bottom: 1px solid #bbbbbb
-
         h3
             font-weight: 500
             color: black
