--- a/components/profile_template/template.module.sass
+++ b/components/profile_template/template.module.sass
@@ -6,6 +6,12 @@
         border-bottom: 1px solid #BBBBBB
         h2
             font-size: 1.2rem
+            display: flex
+            align-items: center
+            justify-content: space-between
+            a
+                font-weight: 400
+                font-size: 1rem
         article
             padding: 2rem 2rem
 
