add display companies

--- a/styles/login.module.sass
+++ b/styles/login.module.sass
@@ -4,6 +4,7 @@
 .auth
     @include flexVary(center, _ )
     min-height: 100vh
+    background: $bg
     .container
         width: 500px
         max-width: 90%
