--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -75,6 +75,7 @@
                     .icon
                         margin-right: 15px
                         font-size: 24px
+                        opacity: .6
                     span
                         transition: .2s
 
