--- a/components/cards/card.module.sass
+++ b/components/cards/card.module.sass
@@ -2,11 +2,18 @@ section.card
     background: white
     margin: 2rem 0
     header
-        padding: 1rem
+        padding: 1rem 2rem
         border-bottom: 1px solid #BBBBBB
         h2
             font-size: clamp(1.2rem, 2vw, 1.2rem)
             display: flex
             justify-content: space-between
     article
-        padding: 1rem
+        padding: 1rem 2rem
+
+@media screen and ( max-width: 767px )
+    section.card
+        header
+            padding: 1rem
+        article
+            padding: 1rem
