--- a/components/header/header.module.sass
+++ b/components/header/header.module.sass
@@ -49,7 +49,7 @@ header.dashboard__header
             cursor: pointer
             .dp__container
                 height: 40px
-                height: 40px
+                width: 40px
                 position: relative
                 margin-right: 1.5rem
                 img
