add alerts and steps for adding jobs

--- a/styles/_colors.sass
+++ b/styles/_colors.sass
@@ -3,3 +3,35 @@ $secondary: #F57F17
 $bg: #E2E8EC
 $light: #5A5A5A
 $text-color: #000000
+
+// alerts
+
+// success
+$color_success_alert: #15575c
+$bg_success_alert: #d4edda
+$border_success_alert: #c3e6cb
+
+// danger
+$color_danger_alert: #721c29
+$bg_danger_alert: #f8d7da
+$border_danger_alert: #f5c6cb
+
+// primary
+$color_primary_alert: #084298
+$bg_primary_alert: #cfe2ff
+$border_primary_alert: #b6d4fe
+
+// secondary
+$color_secondary_alert: #41464b
+$bg_secondary_alert: #e2e3e5
+$border_secondary_alert: #d3d6d8
+
+// warning
+$color_warning_alert: #664d03
+$bg_warning_alert: #fff3cd
+$border_warning_alert: #ffecb5
+
+// info
+$color_info_alert: #055160
+$bg_info_alert: #cff4fc
+$border_info_alert: #b6effb
