add multistep job form

--- a/components/jobs/steps/steps.module.sass
+++ b/components/jobs/steps/steps.module.sass
@@ -24,6 +24,7 @@
                 cursor: pointer
                 text-align: center
                 &:disabled, &[disabled]
+                    cursor: default
                     &:hover
                         span.icon
                             background: lightgray
