--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -226,6 +226,8 @@ span.ripple
             display: flex
             justify-content: flex-end
             margin-top: -2.8rem
+        .desktop_filter
+            display: none
         .sub__content
             .sub_btn
                 display: none
