fix pagination issues

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -16,6 +16,10 @@ a
         color: #E2E8EC
     &:hover
         text-decoration: underline
+    &.disabled
+        pointer-events: none
+        cursor: default
+        opacity: .5
 
 input, textarea, button, select
     &:focus
