--- a/components/pagination/pagination.module.sass
+++ b/components/pagination/pagination.module.sass
@@ -2,3 +2,8 @@
     margin: 2rem 0
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
+    .icon
+        font-size: 1.5rem
+    a
+        margin-left: 1rem
