add filter in applications page

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -114,7 +114,9 @@ span.ripple
             margin-left: .7rem
 
 .filter__criteria
+    background: white
     .criteria
+        padding: 1rem
         margin-bottom: .7rem
         display: flex
         align-items: flex-start
@@ -149,6 +151,7 @@ span.ripple
 
 .form__control__filter
     width: calc( 100% - 50px ) !important
+    background: none !important
     input
         border: none !important
         padding: .3rem !important
