--- a/components/applications/search.module.sass
+++ b/components/applications/search.module.sass
@@ -3,9 +3,10 @@
 .search
     padding: 2rem 1rem
     background: white
-    margin: 2rem 0 2rem
+    margin: 2rem 0
     box-shadow: 5px 4px 30px 5px rgba(0, 0, 0, 0.15)
     h2
+        margin-bottom: 1.5rem
         font-size: clamp(1.1rem, 2vw, 1.3rem)
     form.form
         display: flex
@@ -13,7 +14,6 @@
         justify-content: center
         border: 1px solid $primary
         height: 37px
-        margin: 2rem 0 1rem
         .btn__primary
             width: 50px
             min-width: 50px
