--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -230,12 +230,17 @@ span.ripple
         padding: 2rem 1rem
         .mt-1
             margin-top: 2rem
-        // .metrics__showcase
-
         .mobile__link
             display: flex
             justify-content: flex-end
-            margin-top: -2.8rem
+            margin-top: -1rem
+            margin-bottom: 1rem
+            button
+                font-size: 1rem
+                color: $primary
+                cursor: pointer
+                &:hover
+                    text-decoration: underline
         .desktop_filter
             display: none
         .sub__content
